--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,10 @@
       <li class="nav-item">
         <a class="nav-link" href={{ path('etudes') }}>Liste des Etudes</a>
       </li>
+       <li class="nav-item">
+        <a class="nav-link" href={{ path('security_registration') }}>Inscription</a>
     </ul>
+    <a class="navbar-brand" href={{ path('security_connexion') }}>Connexion</a>
   </div>
 </nav>
     <div class=" container">
