--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -7,6 +7,7 @@
 
 {{ form_row(form.nompersonne, {'label': 'Nom d\'utilisateur', 'attr': {'placeholder': 'Nom d\'utilisateur ...'}}) }}
 {{ form_row(form.motdepasse, {'label': 'Mot De passe', 'attr': {'placeholder': 'Mot De passe ...'}}) }}
+{{ form_row(form.confirm_password, {'label': 'Confirmez le Mot De passe', 'attr': {'placeholder': 'Confirmez le Mot De passe ...'}}) }}
 {{ form_row(form.idMetier, {'label': 'idMetier', 'attr': {'placeholder': 'idMetier ...'}}) }}
 
 <button type="submit" class="btn btn-success">Inscription </button>
