--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
        <li class="nav-item">
         <a class="nav-link" href={{ path('security_registration') }}>Inscription</a>
     </ul>
-    <a class="navbar-brand" href={{ path('security_connexion') }}>Connexion</a>
+    <a class="navbar-brand" href={{ path('security_login') }}>Connexion</a>
   </div>
 </nav>
     <div class=" container">
