--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -5,8 +5,9 @@
 
  {{ form_start(form) }} 
 
-{{ form_row(form.nompersonne, {'label': 'Nom d\'utilisateur', 'attr': {'placeholder': 'Nom d\'utilisateur ...'}}) }}
-{{ form_row(form.motdepasse, {'label': 'Mot De passe', 'attr': {'placeholder': 'Mot De passe ...'}}) }}
+{{ form_row(form.email, {'label': 'Email', 'attr': {'placeholder': 'Email ...'}}) }}
+{{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr': {'placeholder': 'Nom d\'utilisateur ...'}}) }}
+{{ form_row(form.password, {'label': 'Mot De passe', 'attr': {'placeholder': 'Mot De passe ...'}}) }}
 {{ form_row(form.confirm_password, {'label': 'Confirmez le Mot De passe', 'attr': {'placeholder': 'Confirmez le Mot De passe ...'}}) }}
 {{ form_row(form.idMetier, {'label': 'idMetier', 'attr': {'placeholder': 'idMetier ...'}}) }}
 
