--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,17 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1> Connexion </h1>
+<h1>Page de Connexion </h1>
 
-<form>
+{% if error %}
+    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
+
+<form action="{{ path('security_login') }}" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">Nom d'utilisateur</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input  class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="_username" value="{{ last_username }}">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Mot De Passe</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="password" class="form-control" id="exampleInputPassword1" name="_password">
   </div>
   {# <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
